--- a/HBPWebUI/Views/Shared/_Layout.cshtml
+++ b/HBPWebUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@inject HBPUI.Library.Endpoint.ICategoryEndpoint categoryEndpoint
+@{
+    List<HBPUI.Library.Models.CategoryModel> categories = await categoryEndpoint.GetAll();
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -49,6 +54,11 @@
                             Shop
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                @foreach (HBPUI.Library.Models.CategoryModel category in categories)
+                                {
+                                    <li><a class="dropdown-item" href="#">@category.Name</a></li>
+                                }
+                                <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="ViewAll">View all</a></li>
                             </ul>
                         </li>
