--- a/HBPWebUI/Views/Product/Index.cshtml
+++ b/HBPWebUI/Views/Product/Index.cshtml
@@ -8,7 +8,7 @@
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
             <li class="breadcrumb-item"><a href="#">Product</a></li>
-            <li class="breadcrumb-item active" aria-current="page">@Model.Product.Id</li>
+            <li class="breadcrumb-item active" aria-current="page">@Model.Product.Name</li>
         </ol>
     </nav>
 </div>
@@ -19,23 +19,21 @@
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                    @for (int i = 1; i < Model.Product.Photos.Count; i++)
+                    {
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="@i" aria-label="Slide @i"></button> 
+                    }
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="~/images/xbox-series-x.png" class="d-block w-100" alt="...">
+                        <img src="~/images/@Model.Product.Thumbnail.GetFullUri" class="d-block w-100" alt="...">
                     </div>
-                <div class="carousel-item">
-                    <img src="~/images/xbox-series-x-2.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="~/images/xbox-series-x-3.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="~/images/xbox-series-x-4.png" class="d-block w-100" alt="...">
-                </div>
+                    @for (int i = 1; i < Model.Product.Photos.Count; i++)
+                    {
+                        <div class="carousel-item">
+                            <img src="~/images/@Model.Product.Photos[i].GetFullUri" class="d-block w-100" alt="...">
+                        </div>
+                    }
                 </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
