--- a/HBPWebUI/Views/Product/ViewAll.cshtml
+++ b/HBPWebUI/Views/Product/ViewAll.cshtml
@@ -24,7 +24,7 @@
                 <div class="col">
                     <a class="text-decoration-none" asp-area="" asp-controller="Product" asp-action="Index" asp-route-id="@product.Id">
                         <div class="card" style="width: unset; height: 100%" >
-                            <img src="~/images/xbox-series-x.png" class="card-img-top" alt="Xbox Series X">
+                            <img src="~/images/@product.Thumbnail.GetFullUri" class="card-img-top" alt="Xbox Series X">
                             <div class="card-body">
                                 <p class="fw-normal text-black d-block text-truncate text-wrap" style="max-width: 100%; height: 100px; max-height: 100px;">@product.Name</p>
                                 <div class="align-text-bottom">
