Add database generated dropdown table values
Adds database generated values for superordinate category, basic category and subordinate categories.

--- a/HBPWebUI/Views/Shared/_Layout.cshtml
+++ b/HBPWebUI/Views/Shared/_Layout.cshtml
@@ -49,138 +49,30 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Sale &amp; Offers
-                            </a>
-                            <ul class="dropdown-menu multi-column columns-3" aria-labelledby="navbarDropdown">
-		                        <div class="row">
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-                                            <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-					                        <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-					                        <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-		                        </div>
-	                        </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Home &amp; Garden
-                            </a>
-                            <ul class="dropdown-menu multi-column columns-3" aria-labelledby="navbarDropdown">
-		                        <div class="row">
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-                                            <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-					                        <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-					                        <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-		                        </div>
-	                        </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Furniture &amp; Lights
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end multi-column columns-3" aria-labelledby="navbarDropdown">
-		                        <div class="row">
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-                                            <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-					                        <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-					                        <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-		                        </div>
-	                        </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Electricals
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end multi-column columns-3" aria-labelledby="navbarDropdown">
-		                        <div class="row">
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-                                            <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-					                        <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-			                        <div class="col-sm-4">
-				                        <ul class="multi-column-dropdown">
-					                        <li><h6 class="dropdown-header">Dropdown header</h6></li>
-					                        <li><a class="dropdown-item" href="#">Action</a></li>
-					                        <li><a class="dropdown-item" href="#">Another action</a></li>
-					                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-				                        </ul>
-			                        </div>
-		                        </div>
-	                        </ul>
-                        </li>
+                        @foreach (var category in categories)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                @category.Superordinate.Title
+                                </a>
+                                <ul class="dropdown-menu multi-column columns-3" aria-labelledby="navbarDropdown">
+		                            <div class="row">
+                                        @foreach (var basic in category.Subordinates)
+                                        {
+                                            <div class="col-sm-4">
+				                                <ul class="multi-column-dropdown">
+                                                    <li><h6 class="dropdown-header">@basic.Key</h6></li>
+                                                    @foreach (var subCategory in basic.Value)
+                                                    {
+                                                        <li><a class="dropdown-item" href="#">@subCategory.Title</a></li>
+                                                    }
+				                                </ul>
+			                                </div>
+                                        }
+		                            </div>
+	                            </ul>
+                            </li>
+                        }
                         <li><hr class="dropdown-divider"></li>
                     </ul>
                     <div class="text-sm-start text-lg-end">
