--- a/HBPWebUI/Views/Shared/_Layout.cshtml
+++ b/HBPWebUI/Views/Shared/_Layout.cshtml
@@ -61,10 +61,10 @@
                                         {
                                             <div class="col-sm-4">
 				                                <ul class="multi-column-dropdown">
-                                                    <li><h6 class="dropdown-header">@basic.Key</h6></li>
+                                                    <li><h6 class="dropdown-header fw-bold text-black">@basic.Key</h6></li>
                                                     @foreach (var subCategory in basic.Value)
                                                     {
-                                                        <li><a class="dropdown-item" href="#">@subCategory.Title</a></li>
+                                                        <li><a class="dropdown-item" asp-area="" asp-controller="Categories" asp-action="Index" asp-route-name="@subCategory.Title">@subCategory.Title</a></li>
                                                     }
 				                                </ul>
 			                                </div>
