--- a/HBPWebUI/Views/Home/Basket.cshtml
+++ b/HBPWebUI/Views/Home/Basket.cshtml
@@ -1,155 +1,131 @@
-﻿@{
+﻿@*
+{
     ViewData["Title"] = "Basket";
 }
 
 <main>
     <div class="container py-5">
         <form>
-            <div class="py-5 text-center">
-                <h2>Basket (3)</h2>
+            <div class="py-1 text-center">
+                <h2>Basket (Model.Basket.Count)</h2>
             </div>
-            <div class="row g-5">
-                <div class="col-md-5 col-lg-4 order-md-last">
-                    <h4 class="d-flex justify-content-between align-items-center mb-3">
-                        <span class="text-primary">Delivery options</span>
-                    </h4>
-                    <ul class="list-group mb-3">
-                        <li class="list-group-item d-flex justify-content-between lh-sm">
-                            <div>
-                                <h6 class="my-0">Stardard delivery</h6>
-                                <small class="text-muted">5 days</small>
-                            </div>
-                            @*<span class="text-muted">FREE</span>*@
-                            <span class="text-muted">£1.50</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between lh-sm">
-                            <div>
-                                <h6 class="my-0">HB&P Plus+</h6>
-                                <small class="text-muted">Next day delivery</small>
-                            </div>
-                            <span class="text-muted">£4/pm</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between lh-sm">
-                            <div>
-                                <h6 class="my-0">HB&P Premium</h6>
-                                <small class="text-muted">3-hour delivery</small>
-                            </div>
-                            <span class="text-muted">$10/pm</span>
-                        </li>
-                    </ul>
-                    <form>
-                        <div class="d-grid my-2">
-                            @*<div class="alert alert-warning d-flex align-items-center my-2" role="alert">
-                                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-                                <div>
-                                Just a heads up, this basket is over £1,000.
-                                </div>
-                            </div>*@
-                            <a asp-area="" asp-controller="Home" asp-action="Checkout" class="btn btn-primary btn-lg" type="button">Go to checkout</a>
+            @if (Model.Basket.Count == 0)
+            {
+                
+            }
+            else
+            {
+                <div class="row g-5">
+                    <div class="col-md-5 col-lg-4 order-md-last">
+                        <div class="pb-3">
+                            <h4 class="d-flex justify-content-between align-items-center mb-3">
+                            <span class="text-primary">Summary</span>
+                            <span class="badge bg-primary rounded-pill">@Model.Basket.Count</span>
+                            </h4>
+                            <ul class="list-group mb-3">
+                                @foreach (var basketItem in Model.Basket)
+                                {
+                                    <li class="list-group-item d-flex justify-content-between lh-sm">
+                                        <div>
+                                            <h6 class="my-0">@basketItem.Product.ShortName</h6>
+                                            <small class="text-muted">Quantity: @basketItem.Quantity</small>
+                                        </div>
+                                        <span class="text-muted">@basketItem.Product.RetailPrice.ToString("C2")</span>
+                                    </li>
+                                }
+                                <li class="list-group-item d-flex justify-content-between">
+                                    <span>Total</span>
+                                    <strong>@Model.Total.ToString("C2")</strong>
+                                </li>
+                            </ul>
                         </div>
-                    </form>
-                </div>
-                <div class="col-md-7 col-lg-8">
-                    <div class="row row-cols-1">
-                        <div class="row">
-                            <div class="card">
-                                <div class="row row-cols-3">
-                                    <div class="col-3">
-                                        <div class="card-body">
-                                            <img src="~/images/xbox-series-x.png" width="100%" height="100%" />
+                        <div class="pt-2">
+                            <h4 class="d-flex justify-content-between align-items-center mb-1">
+                                <span class="text-primary">Delivery options</span>
+                            </h4>
+                            <p class="text-muted mb-1">Please choose at checkout.</p>
+                            <ul class="list-group mb-3">
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <div>
+                                        <h6 class="my-0">Stardard delivery</h6>
+                                        <small class="text-muted">5 days</small>
+                                    </div>
+                                    <span class="text-muted">FREE</span>
+                                    <span class="text-muted">£1.50</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <div>
+                                        <h6 class="my-0">HB&P Plus+</h6>
+                                        <small class="text-muted">Next day delivery</small>
+                                    </div>
+                                    <span class="text-muted">£4/pm</span>
+                                </li>
+                                <li class="list-group-item d-flex justify-content-between lh-sm">
+                                    <div>
+                                        <h6 class="my-0">HB&P Premium</h6>
+                                        <small class="text-muted">3-hour delivery</small>
+                                    </div>
+                                    <span class="text-muted">$10/pm</span>
+                                </li>
+                            </ul>
+                        </div>
+                        
+                        <form>
+                            <div class="d-grid my-2">
+                                @if (Model.ShowPriceWarning)
+                                {
+                                    <div class="alert alert-warning d-flex align-items-center my-2" role="alert">
+                                        <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                                        <div>
+                                        Just a heads up, this basket is over £1,000.
                                         </div>
                                     </div>
-                                    <div class="col-7">
-                                        <div class="card-body">
-                                            <h5 class="card-title fw-normal">Microsoft Xbox Series X Console, 1TB, with Wireless Controller, Black</h5>
-                                            <h6 class="card-subtitle my-3 fw-bold">£449.99</h6>
-                                            <div class="row py-3">
-                                                <div class="col-7 d-flex align-items-center">
-                                                    <p class="fw-normal m-0">Quantity:</p>
+                                }
+                                <a asp-area="" asp-controller="Home" asp-action="Checkout" class="btn btn-primary btn-lg" type="button">Go to checkout</a>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-md-7 col-lg-8">
+                        <div class="row row-cols-1">
+                            @foreach (var basketItem in Model.Basket)
+                            {
+                                <div class="row gy-3">
+                                    <div class="card">
+                                        <div class="row row-cols-3">
+                                            <div class="col-3">
+                                                <div class="card-body">
+                                                    <img src="~/images/@basketItem.Product.Thumbnail.GetFullUri" width="100%" height="100%" />
                                                 </div>
-                                                <div class="col-5">
-                                                    <input class="form-control" type="number" value="1" aria-label="default input example">
+                                            </div>
+                                            <div class="col-7">
+                                                <div class="card-body">
+                                                    <h5 class="card-title fw-normal">@basketItem.Product.Name</h5>
+                                                    <h6 class="card-subtitle my-3 fw-bold">@basketItem.Product.RetailPrice.ToString("C2")</h6>
+                                                    <div class="row py-3">
+                                                        <div class="col-7 d-flex align-items-center">
+                                                            <p class="fw-normal m-0">Quantity:</p>
+                                                        </div>
+                                                        <div class="col-5">
+                                                            <input class="form-control disabled" type="number" value="@basketItem.Quantity" aria-label="default input example">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-2">
+                                                <div class="card-body">
+                                                    <form>
+                                                        <button type="button" class="btn-close" aria-label="Close"></button>
+                                                    </form>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-2">
-                                        <div class="card-body">
-                                            <form>
-                                                <button type="button" class="btn-close" aria-label="Close"></button>
-                                            </form>
-                                        </div>
-                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="row gy-3">
-                            <div class="card">
-                                <div class="row row-cols-3">
-                                    <div class="col-3">
-                                        <div class="card-body">
-                                            <img src="~/images/xbox-series-x.png" width="100%" height="100%" />
-                                        </div>
-                                    </div>
-                                    <div class="col-7">
-                                        <div class="card-body">
-                                            <h5 class="card-title fw-normal">Microsoft Xbox Series X Console, 1TB, with Wireless Controller, Black</h5>
-                                            <h6 class="card-subtitle my-3 fw-bold">£449.99</h6>
-                                            <div class="row py-3">
-                                                <div class="col-7 d-flex align-items-center">
-                                                    <p class="fw-normal m-0">Quantity:</p>
-                                                </div>
-                                                <div class="col-5">
-                                                    <input class="form-control" type="number" value="1" aria-label="default input example">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-2">
-                                        <div class="card-body">
-                                            <form>
-                                                <button type="button" class="btn-close" aria-label="Close"></button>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row gy-3">
-                            <div class="card">
-                                <div class="row row-cols-3">
-                                    <div class="col-3">
-                                        <div class="card-body">
-                                            <img src="~/images/xbox-series-x.png" width="100%" height="100%" />
-                                        </div>
-                                    </div>
-                                    <div class="col-7">
-                                        <div class="card-body">
-                                            <h5 class="card-title fw-normal">Microsoft Xbox Series X Console, 1TB, with Wireless Controller, Black</h5>
-                                            <h6 class="card-subtitle my-3 fw-bold">£449.99</h6>
-                                            <div class="row py-3">
-                                                <div class="col-7 d-flex align-items-center">
-                                                    <p class="fw-normal m-0">Quantity:</p>
-                                                </div>
-                                                <div class="col-5">
-                                                    <input class="form-control" type="number" value="1" aria-label="default input example">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-2">
-                                        <div class="card-body">
-                                            <form>
-                                                <button type="button" class="btn-close" aria-label="Close"></button>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            }
                         </div>
                     </div>
                 </div>
-            </div>
+            }
         </form>
     </div>
-</main>
+</main>*@
