--- a/HBPWebUI/Views/Shared/Error.cshtml
+++ b/HBPWebUI/Views/Shared/Error.cshtml
@@ -3,23 +3,42 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
-
-@if (Model.ShowRequestId)
-{
-    <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
-    </p>
-}
-
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+<div class="container py-4 border-bottom">
+    <h1 class="text-danger">Error.</h1>
+    <p class="text-danger">An error occurred while processing your request.</p>
+    @if (Model.ShowDefaultMessage)
+    {
+        <div class="alert alert-danger d-flex align-items-center" role="alert">
+            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+            <div>
+            This issue shouldn't have happened. <strong>Try refreshing the page </strong> or go <a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-primary btn-sm">back to home</a>
+            </div>
+        </div>
+    }
+    else
+    {
+        <div class="alert alert-danger" role="alert">
+            <div class="d-flex align-items-center mb-3">
+                <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                <h4 class="alert-heading m-0">Response message</h4>
+            </div>
+            <p>@Model.Message</p>
+            <hr>
+            <p class="mb-0">This issue shouldn't have happened. <strong>Try refreshing the page </strong> or go <a asp-area="" asp-controller="Home" asp-action="Index" class="btn btn-primary btn-sm">back to home</a></p>
+        </div>
+    }
+    @if (Model.ShowRequestId)
+    {
+        <button class="btn btn-primary mb-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Show request ID
+        </button>
+        <div class="collapse" id="collapseExample">
+            <div class="card">
+                <h5 class="card-header">Request ID</h5>
+                <div class="card-body">
+                    <p class="card-text"><code>@Model.RequestId</code></p>
+                </div>
+            </div>
+        </div>
+    }
+</div>
